@@ -13,5 +13,7 @@ swyear <swyear@gmail.com>
 
 Acknowledge:
 -----------
-input-keyboard.png from Tango project.
+From Tango project:
+    input-keyboard.png 
+    settings.png  (gnome-settings.png)
 
