@@ -71,8 +71,8 @@ ADD_SUBDIRECTORY(po)
 #
 SET(MAIN_DOCS AUTHORS README ChangeLog NEWS COPYING)
 
-INSTALL(FILES ${MAIN_DOCS} 
-    DESTINATION "${PROJECT_DOCDIR}")
+#INSTALL(FILES ${MAIN_DOCS} 
+#    DESTINATION "${PROJECT_DOCDIR}")
 
 INSTALL(DIRECTORY icons
     DESTINATION  ${PROJECT_DATADIR})
