@@ -1,3 +1,7 @@
-* Fri Feb 20 2009 - Peng Huang (shawn.p.huang@gmail.com), Ding-Yi Chen (dchen at redhat.com) <> - 1.0.0.20090220-1
+* Mon Feb 23 2009 - Ding-Yi Chen <dchen at redhat.com> <> - 1.0.1.20090223-1
+  KbType Setting moved to Setting.
+  Memory leaking checked.
+
+* Fri Feb 20 2009 - Ding-Yi Chen <dchen at redhat.com>  - 1.0.0.20090220-1
 This is a barely working version for with IBus C.
 The build system is converted from autotool to CMake.
